2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Added loading of
	references when clicking on types that are not loaded.

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceFolderNodeBuilder.cs: Types are
	now clickable.

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs: fixed "Bug
	456308 - Assembly Browser: namespace browser".

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* gtk-gui/MonoDevelop.AssemblyBrowser.AssemblyBrowserWidget.cs: Added
	link support (Loading of referenced links still missing).

2009-01-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs: Track api changes.

2009-01-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DisplayBinding.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserView.cs: Only "one" browser
	now can be open.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Added support
	for generic help urls.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AssemblyBrowser.mdp: All projects now require fx 3.5.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AssemblyBrowser/DisplayBinding.cs: In
	CanCreateContentForFile, return true for assemblies.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.
